Fake Vs Real News Prediction working with accuracy 91%

--- a/Fake_vs_Real_News_ML/Fake_vs_Real_News.ipynb
+++ b/Fake_vs_Real_News_ML/Fake_vs_Real_News.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "id": "541485dd-4876-4f64-ab96-a47a4f4368dd",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "b5b3bf4b-c7ed-4cfa-b3d1-8057ef5f3bcd",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "a51accd7-78c9-40dc-a6b8-a2cce1a54920",
    "metadata": {},
    "outputs": [
@@ -102,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "id": "d2caf989-df25-497e-9c51-739036ad3977",
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_data=pd.read_csv(\"WELFake_Dataset.csv\")"
+    "news_data=pd.read_csv('Fake_News.csv')"
    ]
   },
   {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "id": "7352c80e-5839-4aec-8407-1bbe88ccb74c",
    "metadata": {},
    "outputs": [
@@ -154,38 +154,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>LAW ENFORCEMENT ON HIGH ALERT Following Threat...</td>\n",
-       "      <td>No comment is expected from Barack Obama Membe...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Did they post their votes for Hillary already?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>GOP Senator Just Smacked Down The Most Puncha...</td>\n",
+       "      <td>The most punchable Alt-Right Nazi on the inter...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...</td>\n",
-       "      <td>Now, most of the demonstrators gathered last ...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>UNHOLY ALLIANCE: Hillary Clinton’s Saudi Spons...</td>\n",
+       "      <td>21st Century Wire says Amid the tossing and t...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Bobby Jindal, raised Hindu, uses story of Chri...</td>\n",
-       "      <td>A dozen politically active pastors came here f...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>BOOM! Danish Government Considers Seizing Migr...</td>\n",
+       "      <td>Is the European gravy train finally coming to ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>SATAN 2: Russia unvelis an image of its terrif...</td>\n",
-       "      <td>The RS-28 Sarmat missile, dubbed Satan 2, will...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Senators Propose Giving States Option to Keep ...</td>\n",
+       "      <td>WASHINGTON  —   Several Republican senators on...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -193,21 +193,21 @@
       ],
       "text/plain": [
        "   Unnamed: 0                                              title  \\\n",
-       "0           0  LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
-       "1           1                                                NaN   \n",
-       "2           2  UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
-       "3           3  Bobby Jindal, raised Hindu, uses story of Chri...   \n",
-       "4           4  SATAN 2: Russia unvelis an image of its terrif...   \n",
+       "0           1                                                NaN   \n",
+       "1          10   GOP Senator Just Smacked Down The Most Puncha...   \n",
+       "2          23  UNHOLY ALLIANCE: Hillary Clinton’s Saudi Spons...   \n",
+       "3          25  BOOM! Danish Government Considers Seizing Migr...   \n",
+       "4          28  Senators Propose Giving States Option to Keep ...   \n",
        "\n",
        "                                                text  label  \n",
-       "0  No comment is expected from Barack Obama Membe...      1  \n",
-       "1     Did they post their votes for Hillary already?      1  \n",
-       "2   Now, most of the demonstrators gathered last ...      1  \n",
-       "3  A dozen politically active pastors came here f...      0  \n",
-       "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
+       "0     Did they post their votes for Hillary already?      1  \n",
+       "1  The most punchable Alt-Right Nazi on the inter...      1  \n",
+       "2   21st Century Wire says Amid the tossing and t...      1  \n",
+       "3  Is the European gravy train finally coming to ...      1  \n",
+       "4  WASHINGTON  —   Several Republican senators on...      0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,17 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "id": "992a371e-2cf9-4d65-abb3-fcda58a0c289",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(72134, 4)"
+       "(12134, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "id": "19d03411-72f3-4e65-80da-bea9f39dd31f",
    "metadata": {},
    "outputs": [
@@ -247,13 +247,13 @@
      "data": {
       "text/plain": [
        "Unnamed: 0      0\n",
-       "title         558\n",
-       "text           39\n",
+       "title         107\n",
+       "text            5\n",
        "label           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "id": "728b5074-d786-4df5-b9ff-50a89d159a2e",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "id": "3f56b255-222f-483e-a830-e0090d2b9bea",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 81,
    "id": "72fb0da5-5162-4942-8873-e4ccfb12f3a8",
    "metadata": {},
    "outputs": [
@@ -333,38 +333,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>LAW ENFORCEMENT ON HIGH ALERT Following Threat...</td>\n",
-       "      <td>No comment is expected from Barack Obama Membe...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td></td>\n",
        "      <td>Did they post their votes for Hillary already?</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>GOP Senator Just Smacked Down The Most Puncha...</td>\n",
+       "      <td>The most punchable Alt-Right Nazi on the inter...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...</td>\n",
-       "      <td>Now, most of the demonstrators gathered last ...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>UNHOLY ALLIANCE: Hillary Clinton’s Saudi Spons...</td>\n",
+       "      <td>21st Century Wire says Amid the tossing and t...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Bobby Jindal, raised Hindu, uses story of Chri...</td>\n",
-       "      <td>A dozen politically active pastors came here f...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>BOOM! Danish Government Considers Seizing Migr...</td>\n",
+       "      <td>Is the European gravy train finally coming to ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>SATAN 2: Russia unvelis an image of its terrif...</td>\n",
-       "      <td>The RS-28 Sarmat missile, dubbed Satan 2, will...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Senators Propose Giving States Option to Keep ...</td>\n",
+       "      <td>WASHINGTON  —   Several Republican senators on...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -372,21 +372,21 @@
       ],
       "text/plain": [
        "   Unnamed: 0                                              title  \\\n",
-       "0           0  LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
-       "1           1                                                      \n",
-       "2           2  UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
-       "3           3  Bobby Jindal, raised Hindu, uses story of Chri...   \n",
-       "4           4  SATAN 2: Russia unvelis an image of its terrif...   \n",
+       "0           1                                                      \n",
+       "1          10   GOP Senator Just Smacked Down The Most Puncha...   \n",
+       "2          23  UNHOLY ALLIANCE: Hillary Clinton’s Saudi Spons...   \n",
+       "3          25  BOOM! Danish Government Considers Seizing Migr...   \n",
+       "4          28  Senators Propose Giving States Option to Keep ...   \n",
        "\n",
        "                                                text  label  \n",
-       "0  No comment is expected from Barack Obama Membe...      1  \n",
-       "1     Did they post their votes for Hillary already?      1  \n",
-       "2   Now, most of the demonstrators gathered last ...      1  \n",
-       "3  A dozen politically active pastors came here f...      0  \n",
-       "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
+       "0     Did they post their votes for Hillary already?      1  \n",
+       "1  The most punchable Alt-Right Nazi on the inter...      1  \n",
+       "2   21st Century Wire says Amid the tossing and t...      1  \n",
+       "3  Is the European gravy train finally coming to ...      1  \n",
+       "4  WASHINGTON  —   Several Republican senators on...      0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,26 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "09091fb8-35b2-426d-92da-f60f980a295a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sample 17,000 rows with label 0 and 17,000 rows with label 1\n",
-    "rows_to_drop_0 = news_data[news_data['label'] == 0].sample(n=30000, random_state=42).index\n",
-    "rows_to_drop_1 = news_data[news_data['label'] == 1].sample(n=30000, random_state=42).index\n",
-    "\n",
-    "# Drop these rows from the DataFrame\n",
-    "news_data = news_data.drop(index=rows_to_drop_0)\n",
-    "news_data = news_data.drop(index=rows_to_drop_1)\n",
-    "\n",
-    "# Reset index if needed\n",
-    "news_data = news_data.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "id": "19216fdf-b14f-43ec-9f88-58e74221397e",
    "metadata": {},
    "outputs": [
@@ -437,7 +418,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "id": "dc138be7-067d-46fb-a26c-78e48f470b89",
    "metadata": {},
    "outputs": [
@@ -458,7 +439,7 @@
        "(12134, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "id": "d638315b-886c-4154-9b67-0247e6b340cc",
    "metadata": {},
    "outputs": [],
@@ -479,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "id": "f9486adc-4606-4ee1-b0cc-6cbc588a3204",
    "metadata": {},
    "outputs": [
@@ -500,7 +481,7 @@
        "Name: content, Length: 12134, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "id": "2ae99907-66e0-4611-802e-d7402a0a71c7",
    "metadata": {},
    "outputs": [],
@@ -529,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "id": "6624e597-4671-4f06-b95c-91789db53fc6",
    "metadata": {},
    "outputs": [],
@@ -545,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "id": "a360d7a0-3a34-48b0-ab31-094952bd6b66",
    "metadata": {},
    "outputs": [],
@@ -555,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "id": "0863103f-8591-4e5f-ab3b-dc66ed6c7d0a",
    "metadata": {},
    "outputs": [],
@@ -566,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "id": "356e1ca6-0c86-4a06-bbbb-68e277423874",
    "metadata": {},
    "outputs": [
@@ -600,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "id": "58238fc9-0cf3-4664-9116-ca81885479c9",
    "metadata": {},
    "outputs": [],
@@ -610,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "id": "4ea5a01f-0fb7-48fd-9a87-e78108b1c84c",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1019,7 @@
        "TfidfVectorizer()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "id": "45d3a1e8-7710-44bd-bf23-3250392367b6",
    "metadata": {},
    "outputs": [],
@@ -1072,16 +1053,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "718ee337-973c-4939-999f-99671ab79ec9",
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "015a95b7-4fa3-4d87-9f1f-d2bf5958aef9",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x_train,x_test,y_train,y_test=train_test_split(X,Y,test_size=0.2,stratify=Y,random_state=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 96,
    "id": "7adf1930-b75d-4946-8b9a-86a9fedd4e56",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1075,7 @@
        "\twith 1810890 stored elements and shape (9707, 67111)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 97,
    "id": "398b17b8-0c17-4263-bc88-7a73f34a82e5",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1096,7 @@
        "array([1, 0, 0, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 98,
    "id": "fd5e8e86-c089-4e50-b2da-a8ab118ee2ac",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "id": "c19bd7ac-5fc3-4ebd-8dac-460458977181",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1553,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 100,
    "id": "1f9b9c00-0be8-46c2-b02a-1656bc35d79e",
    "metadata": {},
    "outputs": [],
@@ -1599,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "id": "05e5e7ab-6859-47ba-9941-e37e707b9f23",
    "metadata": {},
    "outputs": [
